# retico-googleasr

./: README.md  pyproject.toml  setup.py
retico_googleasr/: __init__.py  googleasr.py
